; ModuleID = '/home/carl/AnghaBench/linux/drivers/connector/extr_cn_queue.c_cn_cb_equal.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/connector/extr_cn_queue.c_cn_cb_equal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cb_id = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cn_cb_equal(%struct.cb_id* %0, %struct.cb_id* %1) #0 {
  %3 = alloca %struct.cb_id*, align 8
  %4 = alloca %struct.cb_id*, align 8
  store %struct.cb_id* %0, %struct.cb_id** %3, align 8
  store %struct.cb_id* %1, %struct.cb_id** %4, align 8
  %5 = load %struct.cb_id*, %struct.cb_id** %3, align 8
  %6 = getelementptr inbounds %struct.cb_id, %struct.cb_id* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.cb_id*, %struct.cb_id** %4, align 8
  %9 = getelementptr inbounds %struct.cb_id, %struct.cb_id* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %7, %10
  br i1 %11, label %12, label %20

12:                                               ; preds = %2
  %13 = load %struct.cb_id*, %struct.cb_id** %3, align 8
  %14 = getelementptr inbounds %struct.cb_id, %struct.cb_id* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.cb_id*, %struct.cb_id** %4, align 8
  %17 = getelementptr inbounds %struct.cb_id, %struct.cb_id* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %15, %18
  br label %20

20:                                               ; preds = %12, %2
  %21 = phi i1 [ false, %2 ], [ %19, %12 ]
  %22 = zext i1 %21 to i32
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
